--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: White Paper
+name: <KRPTN>
 description: >
     A simple jekyll theme aimed at programmers who like clean interface to write posts
     and show off some code.
@@ -19,19 +19,19 @@ disqus_shortname:
 
 rtl: false
 owner:
-  name:           whitepaper
+  name:           krptn
   avatar:         "https://avatars1.githubusercontent.com/u/537678?s=240&v=4"
-  email:          "vinit1414.08@bitmesra.ac.in"
+  email:          "armandoahir@gmail.com"
   # Social networking links used in footer. Update and remove as you like.
-  twitter: vinitkme
-  github: https://github.com/vinitkumar
-  stackexchange: https://stackoverflow.com/users/859112/vinit-kumar?tab=profile
-  linkedin: https://www.linkedin.com/in/vinitatlinkedin
+  #twitter: vinitkme
+  github: https://github.com/armandoahir
+  #stackexchange: https://stackoverflow.com/users/859112/vinit-kumar?tab=profile
+  #linkedin: https://www.linkedin.com/in/vinitatlinkedin
   # For Google Authorship https://plus.google.com/authorship
-  google_plus:
+  #google_plus:
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:
-google_verify:
+#google_analytics:
+#google_verify:
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-bing_verify:
+#bing_verify:
