--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ owner:
   email:          "armandoahir@gmail.com"
   # Social networking links used in footer. Update and remove as you like.
   #twitter: vinitkme
-  github: https://github.com/armandoahir
+  github: https://github.com/0xkrptn
   #stackexchange: https://stackoverflow.com/users/859112/vinit-kumar?tab=profile
   #linkedin: https://www.linkedin.com/in/vinitatlinkedin
   # For Google Authorship https://plus.google.com/authorship
